Fix Sphere texture after respawning on LongTile